app/assets/styles/style-mobile.css
@media only screen and (max-height: 610px), screen and (max-width: 700px) {
  html {
    padding: 0;
  }

  body {
    grid-template-columns: 1fr 1fr 0.1fr;
    grid-template-rows: 70px auto auto 140px;
    grid-row-gap: 0px;
    min-height: 94vh;
    min-width: 88vw;
    padding-top: 8%;
    padding-bottom: 0;
    margin: 0;
    padding-left: 6vw;
    padding-right: 6vw;
  }

  .sidebar {
    position: relative;
    top: 0;
    grid-column: 1;
    grid-row: 1 / 3;
  }

  .article, .apropos, .archives {
    position: relative;
    grid-column-start: 1;
    grid-column-end: 4;
    grid-row: 3;
    padding: 0;
    margin-left: 0px;
    margin-right: 0px;
  }
  .article {
    margin-top: 60px;
  }
  .content1, .content1, .content2 {
    width: 100%;
  }
  .content1 img, .content1 img, .content2 img{
    width: 100%;
  }
  .footer {
    position: relative;
    grid-column: 1;
    grid-row: 4;
    bottom: 0;
    padding-top: 60px;
  }

  .lnm {
    position: relative;
    grid-column: 3;
    grid-row: 4;
    right: 0;
    bottom: 0;
    padding-top: 60px;
  }
  .lnmtext {
    display: none;
  }
  /* Hide archive menu on page */
  .body-archive .archives-link {
    display: none;
  }
  .archives {
    margin-top: 0;
    left: 0;
    top: 0;
  }
}

